# agro_gee_api

./: .env.example  .gitignore  README.md  ROADMAP.MD  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
agro_gee_api/: db.py  main.py
agro_gee_api/routes/: _authz.py  _crud_common.py  agro.py  analytics.py  auth.py  farms.py  fields.py  gee.py  users.py  whatsapp.py
agro_gee_api/services/: agro_engine.py  agro_profiles.py  gee_catalog.py  gee_client.py  gee_landsat9_extract.py  gee_meteo_catalog.py  gee_meteo_extract.py  gee_runtime.py  gee_sentinel1_extract.py  gee_sentinel2.py  gee_sentinel2_extract.py
database/migrations/: 0001_init.sql  0002_core_entities.sql  0003_gee_datasets.sql
docs/: guia-teste-gee-api.md  security-baseline.md
tests/: conftest.py  test_agro_engine.py  test_agro_integration.py  test_agro_profiles.py  test_agro_route.py  test_authz_context.py  test_ci_contract.py  test_core_crud_api_integration.py  test_core_entities_migration.py  test_database_extensions.py  test_db_resilience.py  test_gee_catalog_service.py  test_gee_client.py  test_gee_extract_service.py  test_gee_landsat9_extract_service.py  test_gee_meteo_catalog.py  test_gee_meteo_extract_service.py  test_gee_route.py  test_gee_runtime.py  test_gee_sentinel1_extract_service.py  test_gee_service.py  test_packaging_contract.py  test_platform_smoke.py  test_routes_registration.py  test_runtime_no_db_contract.py  test_runtime_no_postgres_contract.py  test_smoke.py  test_web_ui_serving.py
web/: index.html  package-lock.json  package.json  tsconfig.json
(+41 files in other folders)
